--- a/clock.html
+++ b/clock.html
@@ -5,10 +5,12 @@
 	<title></title>
 	<style>
 		.clock {
-			font: 48pt monospace;
+			font: 4.5em monospace;
 			margin: 0 auto;
-			width: 556pt;
-			margin-top: 1.5em;
+			text-align: center;
+			margin-top: 1em;
+			width: 100 vmin;
+			height: 100 vmin;
 		}
 		.clock span {
 			padding: 0 0.25em;
